monticore-generator/src/test/resources/cocos/invalid/A2031/A2031.mc4
package cocos.invalid.A2031;

grammar A2031 {

  A = B;

}